--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,6 @@
    RewriteRule    ^$ app/webroot/    [L]
    RewriteRule    (.*) app/webroot/$1 [L]
 </IfModule>
+<IfModule mime_module>
+	AddHandler application/x-httpd-ea-php56 .php .php5 .phtml
+</IfModule>
