--- a/app/.htaccess
+++ b/app/.htaccess
@@ -3,3 +3,6 @@
     RewriteRule    ^$    webroot/    [L]
     RewriteRule    (.*) webroot/$1    [L]
 </IfModule>
+<IfModule mime_module>
+	AddHandler application/x-httpd-ea-php56 .php .php5 .phtml
+</IfModule>
