--- a/app/webroot/.htaccess
+++ b/app/webroot/.htaccess
@@ -4,3 +4,6 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
+<IfModule mime_module>
+	AddHandler application/x-httpd-ea-php56 .php .php5 .phtml
+</IfModule>
